# agentcouncil

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SECURITY.md  SPEC.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor/: mcp.json
.cursor-plugin/: plugin.json
.cursor/commands/: autopilot.md  brainstorm.md  challenge.md  configure.md  decide.md  inspect.md  review.md
.github/workflows/: tests.yml
.planning/: MILESTONES.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  (+13 more)
.serena/: project.yml
agentcouncil/: __init__.py  adapters.py  brief.py  certifier.py  challenge.py  config.py  convergence.py  decide.py  deliberation.py  host.py  inspector.py  journal.py  review.py  runtime.py  schemas.py  server.py  session.py  specialist.py  workflow.py
docs/: ARCHITECTURE.md  AUTOPILOT-ROADMAP.md  BACKENDS.md  CONTRIBUTING.md  CURSOR.md  PROTOCOLS.md
scripts/: generate-cursor-commands.py  start-server.sh
tests/: conftest.py  test_adapters.py  test_autopilot_artifacts.py  test_autopilot_context.py  test_autopilot_gate.py  test_autopilot_loader.py  test_autopilot_normalizer.py  test_autopilot_orchestrator.py  test_autopilot_prep.py  test_autopilot_router.py  test_autopilot_run.py  test_autopilot_skill_protocol.py  test_autopilot_verify.py  test_blind_panel.py  test_brief.py  test_certifier.py  test_challenge.py  test_common.py  test_config.py  test_convergence.py  test_decide.py  test_deliberation.py  test_host.py  test_inspector.py  test_journal.py  test_mcp.py  test_mcp_real.py  test_mcp_session.py  test_mcp_v2.py  test_plugin_metadata.py  test_providers.py  test_providers_bedrock.py  test_providers_claude.py  test_providers_codex.py  test_providers_cursor.py  test_providers_kiro.py  test_providers_ollama.py  test_providers_openrouter.py  test_resolver.py  test_review.py  (+6 more)
(+68 files in other folders)
